# ordcode

./: .travis.yml  Cargo.toml  LICENSE-MIT.txt  README.md  README.tpl
.github/workflows/: build.yml  ci.yml  clippy-nightly.yml  clippy-stable.yml
ensure_features/no_serde/: Cargo.toml
ensure_features/no_serde/src/: main.rs
ensure_features/no_std/: Cargo.toml
ensure_features/no_std/src/: lib.rs
src/: buf.rs  bytes.rs  bytes_esc.rs  bytesbuf.rs  errors.rs  hint_ser.rs  lib.rs  ord_de.rs  ord_ser.rs  params.rs  primitives.rs  readwrite.rs  size_calc.rs  varint.rs
tests/: test_ord.rs  test_primitives.rs  test_varint.rs
