[package]
name = "ordcode"
version = "0.2.1"
authors = ["Paul Antonov, <paul.antonov@gmail.com>"]
exclude = [".gitignore", ".github", "ensure_features"]
edition = "2018"

publish=true
repository = "https://github.com/pantonov/ordcode"
documentation = "https://docs.rs/ordcode"
readme = "README.md"
categories = [ "encoding", "data-structures", "database" ]
keywords = [ "ordered", "lexicographical", "encoding", "serde", "key-value" ]

license = "MIT OR Apache-2.0"
description = "Serialization format which preserves lexicographical ordering, for use with key-value databases"

[features]
default = [ "std", "serde" ]
std=[ "serde/std" ]

[dependencies]
serde = { version = "1.*", optional = true, default-features=false }

[dev-dependencies]
serde_bytes = "0.*"
serde_derive = "1.*"
